well detail tabbed layout complete

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -10,231 +10,21 @@
     <app-alert-display></app-alert-display>
     <nav ngbNav #nav="ngbNav" class="nav-tabs nav-fill">
         <ng-container ngbNavItem>
-            <a ngbNavLink><strong>Well Overview</strong></a>
+            <a ngbNavLink><h5>Well Overview</h5></a>
             <ng-template ngbNavContent>
                 <zybach-well-overview-tab [well]="well" *ngIf="well"></zybach-well-overview-tab>
             </ng-template>
         </ng-container>
         <ng-container ngbNavItem>
-            <a ngbNavLink><strong>Water Data Program</strong></a>
+            <a ngbNavLink><h5>Water Data Program</h5></a>
             <ng-template ngbNavContent>
-                <div class="row col-12 mt-2">
-                    <div class="col-5 mt-2">
-                        <div class="card">
-                            <div class="card-header">
-                                Annual Pumped Volume
-                                <div class="btn-group btn-group-toggle float-right">
-                                    <label class="btn btn-toggle btn-sm btn-zybach" [ngClass]="unitsShown === 'gal' ? 'active' : ''">
-                                      <input type="radio" name="units" id="gal" (click)="toggleUnitsShown('gal')"> Volume&nbsp;(gal)
-                                    </label>
-                                    <label class="btn btn-toggle btn-sm btn-zybach" [ngClass]="[unitsShown === 'in' ? 'active' : '', displayIrrigatedAcres() ? '' : 'disabled']" style="width:100px">
-                                      <input type="radio" name="units" id="in" (click)="toggleUnitsShown('in')" [disabled]="!displayIrrigatedAcres()"> Depth&nbsp;(in)
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="card-body text-center">
-                                <table class="table table-responsive table-striped" *ngIf="well">
-                                    <thead>
-                                        <tr>
-                                            <th style="text-align: center;">Year</th>
-                                            <th>Flow Meter</th>
-                                            <th>Continuity Meter</th>
-                                            <th>Electrical Usage</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr *ngFor="let year of years">
-                                            <td style="text-align: center;">{{year}}</td>
-                                            <td>{{getAnnualPumpedVolume(year, "Flow Meter")}}</td>
-                                            <td>{{getAnnualPumpedVolume(year, "Continuity Meter")}}</td>
-                                            <td>{{getAnnualPumpedVolume(year, "Electrical Usage")}}</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <ng-container *ngIf="!well">
-                                    <span class="fas fa-spinner loading-spinner"></span>
-                                    <p>Loading...</p>
-                                </ng-container>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-7 mt-2">
-                        <div class="card">
-                            <div class="card-header">
-                                Sensors
-                            </div>
-                            <div class="card-body text-center">
-                                <table class="table table-responsive table-striped" *ngIf="well">
-                                    <thead>
-                                        <tr>
-                                            <th>Sensor Name</th>
-                                            <th>Sensor Type</th>
-                                            <th>Last Message Age (Hours)</th>
-                                            <th>Status</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr *ngFor="let sensor of sensorsWithStatus">
-                                            <td><a routerLink="/sensors/{{sensor.SensorID}}">{{sensor.SensorName}}</a></td>
-                                            <td>{{sensor.SensorType}}</td>
-                                            <td>{{sensor.MessageAge}}</td>
-                                            <td>{{sensor.IsActive ? 'Enabled' : 'Disabled'}}</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <ng-container *ngIf="!well">
-                                    <span class="fas fa-spinner loading-spinner"></span>
-                                    <p>Loading...</p>
-                                </ng-container>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row col-12 mt-4">
-                    <div class="col">
-                        <div class="card">
-                            <div class="card-header">
-                                Flow Measurements
-                                <a *ngIf="!noTimeSeriesData" class="btn btn-sm btn-zybach float-right" (click)="exportChartData()"><span class="fas fa-download"></span> Download CSV</a>
-                            </div>
-                            <div class="card-body">
-                                <div class="row" *ngIf="!timeSeries">
-                                    <div class="col text-center">
-                                        <span class="fas fa-spinner loading-spinner"></span>
-                                        <p>Loading...</p>
-                                    </div>
-                                </div>
-                                <div class="row" *ngIf="!noTimeSeriesData">
-                                    <div class="input-group col-4">
-                                        <span class="font-weight-bold mt-1 mx-3">Date Range:</span>
-                                        <!-- input box -->
-                                        <input id="dateRangeInput" class="form-control" name="mydate" placeholder="Select a date" 
-                                               angular-mydatepicker #dp="angular-mydatepicker" 
-                                               [(ngModel)]="dateRange" [options]="myDpOptions"
-                                               (dateChanged)="onDateChanged($event)"/>
-                                      
-                                        <!-- toggle calendar button -->
-                                        <div class="input-group-append">
-                                          <button type="button" class="btn btn-secondary" (click)="dp.toggleCalendar()">
-                                            <i class="fa fa-calendar-o"></i>
-                                          </button>
-                                        </div>
-                                      
-                                      </div>
-                                      <div class="col-2">
-                                          <button type="button" class="btn btn-zybach" (click)="useFullDateRange()">Use Full Date Range</button>
-                                      </div>
-            
-                                </div>
-                                <div *ngIf="!noTimeSeriesData" id="{{chartID}}" style="width:100%; min-height: 340px;"></div>
-                                <em *ngIf="!noTimeSeriesData">All data are displayed in Central Daylight Time</em>
-                                <em *ngIf="noTimeSeriesData">No time series data available for this well.</em>
-                            </div>
-                        </div>
-                    </div>
-                </div>  
-    
+                <zybach-well-water-data-tab [well]="well" *ngIf="well"></zybach-well-water-data-tab>
             </ng-template>
         </ng-container>
         <ng-container ngbNavItem>
-            <a ngbNavLink><strong>Permits and Inspections</strong></a>
+            <a ngbNavLink><h5>Permits and Inspections</h5></a>
             <ng-template ngbNavContent>
-            
-            <div class="row mt-4">
-                <div class="col">
-                    <div class="card">
-                        <div class="card-header">
-                            Inspections
-                            <em class="small" *ngIf="hasWellPressureSensor()"> - This well has a well pressure sensor installed. Click on the sensor name above to view the water level readings for each sensor.</em>
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-
-                                <div class="col-sm">
-                                    <div class="row">
-                                        <div class="col">
-                                            <h5 class="d-inline-block">Seasonal Water Level Inspections</h5>
-                                            <button class="btn btn-secondary btn-md float-right m-2" style="cursor: pointer;" (click)="exportWLIToCsv()" placement="top"
-                                            ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
-                                            <a class="btn btn-zybach btn-md float-right m-2" routerLink="/wells/{{well?.WellID}}/new-water-level-inspection"
-                                            ngbTooltip="New Water Level Inspection"><span class="fas fa-plus"></span></a>
-                                            <fresca-clear-grid-filters-button class="m-2 float-right" [grid]="waterLevelInspectionsGrid">
-                                            </fresca-clear-grid-filters-button>
-                                        </div>
-                                    </div>
-                                    <div class="table-responsive">
-                                        <ag-grid-angular #waterLevelInspectionsGrid style="width: 100%; height: 200px;" 
-                                            class="ag-theme-balham"
-                                            [columnDefs]="waterLevelInspectionColumnDefs" [defaultColDef]="defaultColDef"
-                                            [pagination]="true" [paginationPageSize]="10" [suppressMenuHide]="true">
-                                        </ag-grid-angular>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm">
-                                    <div class="row">
-                                        <div class="col">
-                                            <h5 class="d-inline-block">Water Quality Inspections</h5>
-                                            <button class="btn btn-secondary btn-md float-right m-2" style="cursor: pointer;" (click)="exportWQIToCsv()" placement="top"
-                                            ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
-                                            <a class="btn btn-zybach btn-md float-right m-2" routerLink="/wells/{{well?.WellID}}/new-water-quality-inspection"
-                                            ngbTooltip="New Water Quality Inspection"><span class="fas fa-plus"></span></a>
-                                            <fresca-clear-grid-filters-button class="m-2 float-right" [grid]="waterQualityInspectionsGrid">
-                                            </fresca-clear-grid-filters-button>
-                                        </div>
-                                    </div>
-                                    <div class="table-responsive">
-                                        <ag-grid-angular #waterQualityInspectionsGrid style="width: 100%; height: 200px;" 
-                                            class="ag-theme-balham"
-                                            [columnDefs]="waterQualityInspectionColumnDefs" [defaultColDef]="defaultColDef"
-                                            [pagination]="true" [paginationPageSize]="10" [suppressMenuHide]="true">
-                                        </ag-grid-angular>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row mt-4">
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-header">
-                            Chemigation
-                        </div>
-                        <div class="card-body">
-                            <div *ngIf="chemigationPermits && chemigationPermits.length > 0; then hasChemigationPermits else noChemigationPermits"></div>
-                            <ng-template #hasChemigationPermits>
-                                <table class="table table-striped">
-                                    <thead>
-                                        <tr>
-                                            <th>Permit #</th>
-                                            <th>Status</th>
-                                            <th>Last Inspected</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr *ngFor="let chemigationPermit of chemigationPermits">
-                                            <td><a routerLink="/chemigation-permits/{{chemigationPermit.ChemigationPermitNumber}}">{{chemigationPermit.ChemigationPermitNumberDisplay}}</a></td>
-                                            <td>{{chemigationPermit.ChemigationPermitStatus.ChemigationPermitStatusDisplayName}}</td>
-                                            <td>{{chemigationPermit.LatestInspection?.InspectionDate | date:'MM/dd/yyyy'}}</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </ng-template>
-                            <ng-template #noChemigationPermits>
-                                <p class="font-italic">
-                                    No Chemigation Permits were found for this well.
-                                </p>                        
-                            </ng-template>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
+                <zybach-well-permits-inspections-tab [well]="well" *ngIf="well"></zybach-well-permits-inspections-tab>
             </ng-template>
         </ng-container>
     </nav>
