--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -303,6 +303,19 @@
     <div class="row mt-4">
         <div class="col">
             <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col">
+                            <div id="{{nitrateChartID}}" style="width:100%; min-height: 340px;"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col">
+            <div class="card">
                 <div class="card-header">
                     Inspections
                     <em class="small" *ngIf="hasWellPressureSensor()"> - This well has a well pressure sensor installed. Click on the sensor name above to view the water level readings for each sensor.</em>
