--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -8,7 +8,7 @@
 </nav>
 <div class="container">
     <app-alert-display></app-alert-display>
-    <nav ngbNav #nav="ngbNav" class="nav-tabs nav-fill">
+    <nav ngbNav #nav="ngbNav" [destroyOnHide]="false" class="nav-tabs nav-fill">
         <ng-container ngbNavItem>
             <a ngbNavLink><h5>Well Overview</h5></a>
             <ng-template ngbNavContent>
