Make getting the nitrate spec its own call to hopefully help with potentially massive payloads,  allow the map tab to not be destroyed after being displayed but do display  the other two tabs because vega embed gets upset when it's hidden and tries to display its chart

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -8,8 +8,8 @@
 </nav>
 <div class="container">
     <app-alert-display></app-alert-display>
-    <nav ngbNav #nav="ngbNav" [destroyOnHide]="false" class="nav-tabs nav-fill">
-        <ng-container ngbNavItem>
+    <nav ngbNav #nav="ngbNav" class="nav-tabs nav-fill">
+        <ng-container ngbNavItem [destroyOnHide]="false">
             <a ngbNavLink><h5>Well Overview</h5></a>
             <ng-template ngbNavContent>
                 <zybach-well-overview-tab [well]="well" *ngIf="well"></zybach-well-overview-tab>
