added water data program read-only role and restricted access to well and sensor data pages, no chemigation or inspections viewable. Hiding nav tab for those items on well detail page and on header nav as well.

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -21,7 +21,7 @@
                 <zybach-well-water-data-tab [well]="well" *ngIf="well"></zybach-well-water-data-tab>
             </ng-template>
         </ng-container>
-        <ng-container ngbNavItem>
+        <ng-container ngbNavItem *ngIf="!isUserReadOnly()">
             <a ngbNavLink><h5>Permits and Inspections</h5></a>
             <ng-template ngbNavContent>
                 <zybach-well-permits-inspections-tab [well]="well" *ngIf="well"></zybach-well-permits-inspections-tab>
