--- a/Source/Zybach.Web/src/app/shared/components/well-overview-tab/well-overview-tab.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/well-overview-tab/well-overview-tab.component.html
@@ -7,7 +7,7 @@
                         <div class="card-header">
                             Basics
                             <div class="float-right">
-                                <a class="btn btn-zybach btn-sm float-right" [ngClass]="{'disabled': isInAgHubOrGeoOptix()}"
+                                <a class="btn btn-zybach btn-sm float-right" [ngClass]="{'disabled': isInAgHubOrGeoOptix() || isUserReadOnly()}"
                                     routerLink="/wells/{{well.WellID}}/edit-registration-id">
                                     <span class="fas fa-edit"></span> Edit Reg. ID
                                 </a>
@@ -60,7 +60,7 @@
                         <div class="card-header">
                             Contact Information
                             <div class="float-right">
-                                <a class="btn btn-zybach btn-sm float-right"
+                                <a class="btn btn-zybach btn-sm float-right" [ngClass]="{'disabled': isUserReadOnly()}"
                                     routerLink="/wells/{{well.WellID}}/edit-contact">
                                     <span class="fas fa-edit"></span> Edit
                                 </a>
@@ -106,7 +106,7 @@
                     <div class="card-header">
                         Program Participation
                         <div class="float-right">
-                            <a class="btn btn-zybach btn-sm float-right"
+                            <a class="btn btn-zybach btn-sm float-right" [ngClass]="{'disabled': isUserReadOnly()}"
                                 routerLink="/wells/{{well.WellID}}/edit-participation">
                                 <span class="fas fa-edit"></span> Edit
                             </a>
