added ZybachEditFeature decorator for put and post routes for chemigation and inspections in place of former AdminFeature since we want to allow normal users CRUD-ability, fixed display of custom-dropdown-selector on well inspection report grid, fixed report dropdown to display all report options except report center for normal users, mis-read the card on that one....

--- a/Source/Zybach.Web/src/app/shared/components/field-definition-grid-header/field-definition-grid-header.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/field-definition-grid-header/field-definition-grid-header.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex; align-items: center; width:100%" (click)="onSortRequested($event)" (mouseenter)="showMenu = true" (mouseleave)="showMenu = false">
+<div style="display: flex; align-items: center; width:100%" (click)="onSortRequested($event)">
     <div #header class="customHeaderLabel"><field-definition  [fieldDefinitionType]="params.fieldDefinitionType" [labelOverride]="params.labelOverride"></field-definition></div>
     <div [hidden]="!params.enableSorting" style="margin-left:5px; margin-right:5px">
         <i *ngIf="this.sorted === 'desc'" class="fa fa-long-arrow-down"></i>
