--- a/Source/Zybach.Web/src/app/pages/well-inspection-reports/well-inspection-reports.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-inspection-reports/well-inspection-reports.component.html
@@ -17,7 +17,7 @@
                         Generate Well Inspection Reports
                     </button>
                     <select name="ReportTemplateID" class="form-control mr-3 float-right mb-2" style="width:auto; min-width: 100px;" 
-                        *ngIf="modelHasMultipleTemplates()" [(ngModel)]="selectedReportTemplateID" required>
+                        [(ngModel)]="selectedReportTemplateID" required>
                         <option value="undefined" disabled>Select a Report Template</option>
                         <option *ngFor="let reportTemplate of reportTemplates" [value]="reportTemplate.ReportTemplateID">
                             {{reportTemplate.DisplayName}}
