--- a/Source/Zybach.Web/src/app/shared/components/clear-grid-filters-button/clear-grid-filters-button.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/clear-grid-filters-button/clear-grid-filters-button.component.html
@@ -1,3 +1,3 @@
-<a class="btn btn-secondary btn-md ml-3" *ngIf="isFilterActive()" style="cursor: pointer;" (click)="clearFilters()" placement="top">
+<a class="btn btn-secondary btn-md ml-3" *ngIf="isFilterActive()" style="cursor: pointer;" (click)="clearFilters()" [ngClass]="classList">
     <i class="fa fa-times-circle"></i> Clear All Filters
 </a>
