--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -124,6 +124,9 @@
                     <a class="dropdown-item" routerLink="/sensor-status">
                         Sensor Status Map
                     </a>
+                    <a class="dropdown-item" routerLink="/anomaly-reports">
+                        Anomaly Reports
+                    </a>
                 </div>
             </li>
             <li class="nav-item mapItem" [ngClass]="{'currentPage': isMapCurrentPage()}">
