--- a/Source/Zybach.Web/src/app/pages/sensor-anomaly-list/sensor-anomaly-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-anomaly-list/sensor-anomaly-list.component.html
@@ -10,11 +10,11 @@
         <div class="col">
             <button class="btn btn-secondary btn-md float-right" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
             ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
-            <fresca-clear-grid-filters-button class="float-right" [grid]="reportedAnomaliesGrid" classList="ml-3">
+            <fresca-clear-grid-filters-button class="float-right" [grid]="sensorAnomaliesGrid" classList="ml-3">
             </fresca-clear-grid-filters-button>
         </div>
     </div>
-    <ag-grid-angular #reportedAnomaliesGrid style="width: 100%; height: 500px;" class="ag-theme-balham mt-2"
+    <ag-grid-angular #sensorAnomaliesGrid style="width: 100%; height: 500px;" class="ag-theme-balham mt-2"
         [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [pagination]="true" [paginationPageSize]="100">
     </ag-grid-angular>
 </div>
