Create, edit, and delete routes roundtripping, using new SensorAnomalyUpsertDto. Delete working from anomaly grid, with warning modal. Edit form created, and linked in anomaly grid. Create form created on Sensor Detail page (still need to handle some display logic).

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -124,8 +124,8 @@
                     <a class="dropdown-item" routerLink="/sensor-status">
                         Sensor Status Map
                     </a>
-                    <a class="dropdown-item" routerLink="/anomaly-reports">
-                        Anomaly Reports
+                    <a class="dropdown-item" routerLink="/sensor-anomalies">
+                        Sensor Anomaly Reports
                     </a>
                 </div>
             </li>
