--- a/Source/Zybach.Web/src/app/pages/sensor-anomaly-list/sensor-anomaly-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-anomaly-list/sensor-anomaly-list.component.html
@@ -2,7 +2,7 @@
     <app-alert-display></app-alert-display>
     <div class="row">
         <div class="col-12">
-            <h2 class="d-inline-block">Anomaly Reports</h2>
+            <h2 class="d-inline-block">Sensor Anomaly Reports</h2>
             <custom-rich-text [customRichTextTypeID]="richTextTypeID"></custom-rich-text>
         </div>
     </div>
@@ -15,6 +15,28 @@
         </div>
     </div>
     <ag-grid-angular #sensorAnomaliesGrid style="width: 100%; height: 500px;" class="ag-theme-balham mt-2"
-        [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [pagination]="true" [paginationPageSize]="100">
+        [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [pagination]="true" [paginationPageSize]="100"
+        (cellClicked)="onCellClicked($event)">
     </ag-grid-angular>
 </div>
+<ng-template #deleteSensorAnomalyModal let-modal>
+    <div class="modal-header bg-secondary">
+        <h5 class="modal-title" id="deleteSensorAnomalyModalTitle">Warning</h5>
+        <button type="button" class="close" aria-label="Close" (click)="modal.close('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <p>
+            You are about to delete the sensor anomaly reported for sensor {{sensorAnomalyToDelete.SensorName}} between {{sensorAnomalyToDelete.StartDate | date: 'shortDate'}} and {{sensorAnomalyToDelete.EndDate | date: 'shortDate'}}.<br><br>
+            Are you sure you wish to proceed?
+        </p>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-danger" (click)="deleteSensorAnomaly()">
+                <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
+                Delete
+            </button>
+            <button type="button" class="btn btn-secondary" (click)="modal.close('Cancel click')">Cancel</button>
+        </div>
+    </div>
+</ng-template>
