update footer with new ESA Sitka graphic

--- a/Source/Zybach.Web/src/app/app.component.html
+++ b/Source/Zybach.Web/src/app/app.component.html
@@ -19,15 +19,15 @@
                 </a>
             </div>
             <div class="col no-gutters text-left">
-                <a href="https://sitkatech.com/" alt="Sitka Technology Group" target="_blank">
-                    <img src="assets/main/logos/sitkatech-logo2x.width-600.png" style="height: 65px;">
+                <a href="https://sitkatech.com/" alt="ESA Sitka" target="_blank">
+                    <img src="assets/main/logos/ESA-Sitka_Logo.png" style="height: 65px;">
                 </a>
             </div>            
         </div>
         
         <div class="row mt-2">
             <div class="col text-center mb-2 footer-text">
-                This program is free software; you can redistribute it and/or modify it under the terms of the <a class="footer-link" href="https://www.gnu.org/licenses/agpl-3.0.html">GNU Affero General Public License</a>. Source code is available on <a class="footer-link" href="https://github.com/sitkatech/zybach/">GitHub</a>. Developed and Maintained by <a class="footer-link" href="https://sitkatech.com/">Sitka Technology Group</a>.
+                This program is free software; you can redistribute it and/or modify it under the terms of the <a class="footer-link" href="https://www.gnu.org/licenses/agpl-3.0.html">GNU Affero General Public License</a>. Source code is available on <a class="footer-link" href="https://github.com/sitkatech/zybach/">GitHub</a>. Developed and Maintained by <a class="footer-link" href="https://sitkatech.com/">ESA Sitka</a>.
             </div>
         </div>
     </div>
