CSV download fixed for Sensor Anomaly grid, margin added between Clear All Filters and Download CSV buttons.

--- a/Source/Zybach.Web/src/app/pages/sensor-anomaly-list/sensor-anomaly-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-anomaly-list/sensor-anomaly-list.component.html
@@ -10,7 +10,7 @@
         <div class="col">
             <button class="btn btn-secondary btn-md float-right" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
             ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
-            <fresca-clear-grid-filters-button class="float-right" [grid]="sensorAnomaliesGrid" classList="ml-3">
+            <fresca-clear-grid-filters-button class="float-right" [grid]="sensorAnomaliesGrid" classList="mr-2">
             </fresca-clear-grid-filters-button>
         </div>
     </div>
