--- a/Source/Zybach.Web/src/app/pages/sensor-status/sensor-status.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-status/sensor-status.component.html
@@ -21,11 +21,11 @@
         <div class="col">
             <button class="btn btn-secondary btn-md float-right mr-3" style="cursor: pointer;" (click)="downloadCsv()" placement="top"
             ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
-            <fresca-clear-grid-filters-button class="mr-3 float-right" [grid]="redSensorsGrid">
+            <fresca-clear-grid-filters-button class="mr-3 float-right" [grid]="wellsGrid">
             </fresca-clear-grid-filters-button>
         </div>
     </div>
-    <ag-grid-angular #redSensorsGrid style="width: 100%; height: 300px;" class="ag-theme-balham mt-2"
+    <ag-grid-angular #wellsGrid style="width: 100%; height: 300px;" class="ag-theme-balham mt-2"
         [rowData]="redSensors" [columnDefs]="columnDefs" [pagination]="true" [paginationPageSize]="100" [rowSelection]="'multiple'"
         (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged($event)">
     </ag-grid-angular>
